Correction class et scrolHorizon Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@ footer {
     flex-direction: column;
 }
 
+.grey {
+    color: #F2F2F2;
+}
+
 #spin {
     position: absolute;
     top: 50%;
@@ -235,21 +239,25 @@ form input:last-child {
     padding-left: 0;
 }
 
-#filtres {
+form span img {
+    display: none;
+}
+
+.filtres {
     font-weight: 700;
     margin-top: 15px;
 }
 
-#filtres p {
+.filtres p {
     margin-top: 25px;
 }
 
-#filtres ul {
+.filtres ul {
     display: flex;
     margin-left: 36px;
 }
 
-#filtres li {
+.filtres li {
     margin-right: 50px;
     border: 2px rgb(0, 0, 0, 0.2) solid;
     border-radius: 25px;
@@ -258,7 +266,7 @@ form input:last-child {
     display: flex;
 }
 
-#filtres li::before {
+.filtres li::before {
     padding-right: 10px;
     padding-left: 10px;
     padding-top: 1px;
@@ -267,23 +275,23 @@ form input:last-child {
     transform: scale(1.3);
 }
 
-#filtres li:hover {
+.filtres li:hover {
     background-color: #DEEBFF;
 }
 
-#filtres li:nth-child(1):before {
+.filtres li:nth-child(1):before {
     content: "\f53a";
 }
 
-#filtres li:nth-child(2):before {
+.filtres li:nth-child(2):before {
     content: "\f183";
 }
 
-#filtres li:nth-child(3):before {
+.filtres li:nth-child(3):before {
     content: "\f004";
 }
 
-#filtres li:nth-child(4):before {
+.filtres li:nth-child(4):before {
     content: "\f6d3";
 }
 
@@ -316,7 +324,7 @@ header div:nth-child(2) div:last-child i {
 }
 
 #hebergements h2:first-of-type {
-    margin-left: 31px;
+    margin-left: 38px;
     margin-top: 40px;
 }
 
@@ -361,14 +369,11 @@ header div:nth-child(2) div:last-child i {
     margin-right: -2px;
 }
 
-#hebergements div:nth-child(3) i:last-child {
-    color: #F2F2F2;
-}
-
 #hebergements a:nth-child(7) {
     margin-top: 40px;
     font-weight: 700;
     font-size: 1.2rem;
+    margin-left: 5px;
 }
 
 #hebergements p {
@@ -454,10 +459,6 @@ header div:nth-child(2) div:last-child i {
     margin-right: 2px;
 }
 
-#populaires div:nth-child(2) i:last-child {
-    color: #F2F2F2;
-}
-
 #activites {
     margin-top: 60px;
     margin-bottom: 5%;
@@ -471,6 +472,7 @@ header div:nth-child(2) div:last-child i {
 #activites div {
     display: flex;
     justify-content: space-between;
+    margin-top: 10px;
 }
 
 #activites article {
@@ -694,11 +696,12 @@ footer nav li:hover {
     header div:nth-child(1) {
         flex-direction: column;
         margin-top: 21px;
+        margin-right: 50px;
     }
 
     header div:nth-child(1) > a {
         text-align: center;
-        margin-bottom: 50px;
+        margin-bottom: 50px;      
     }
 
     header div:nth-child(1) ul li a {
@@ -723,7 +726,7 @@ footer nav li:hover {
     }
 
     header div:nth-child(1) ul li:nth-child(2) a {
-        padding-right: 88px;
+        padding-left: 56px;
     }
 
     header div:nth-child(2) {
@@ -742,35 +745,61 @@ footer nav li:hover {
     }
 
     form {
-        padding-left: 21px;
+        padding-left: 15px;
         padding-right: 21px;
     }
 
-    form input:last-child {
-        font-size: 1rem;
+    form input {
+        width: 234px;
     }
 
-    #filtres {
+    form input:last-child {
+        width: 55px;
+    }
+
+    form input[value=Rechercher] {
+        font-size: 1rem;
+        color: #0065FC;
+    }
+
+    form span {
+        position: relative;
+    }
+
+    form span img {
+        display: unset;
+        color: #0065FC;
+        position: absolute;
+        width: 24px;
+        left: 14px;
+        top: 13px;
+    }
+
+    .filtres {
         flex-direction: column;
     }
 
-    #filtres p {
+    .filtres p {
         padding-left: 20px;
         font-size: 1.2rem;
         margin-bottom: 5px;
     }
 
-    #filtres ul {
+    .filtres ul {
         flex-wrap: wrap;
         margin: 0;
         justify-content: space-around
     }
 
-    #filtres li {
+    .filtres li {
         width: 160px;    
         font-size: 0.7rem;
         margin: 10px;
         align-items: center;
+    }
+
+    .filtres li:nth-child(n):before {
+        transform: scale(1.8);
     }
 
     header div:nth-child(2) div:last-child {
@@ -790,10 +819,19 @@ footer nav li:hover {
         animation:2s apparition 4s forwards;
     }
 
+    #hebergements > div {
+        margin: 0;
+    }
+
+    #hebergements div:nth-child(2) {
+        padding-left: 17px;
+    }
+
     #hebergements h2:first-of-type {
-        margin-left: 43px;
-        margin-top: 20px;
+        margin-left: 21px;
+        margin-top: 30px;
         margin-bottom: 10px;
+        font-size: 1.4rem;
     }
 
     #hebergements article {
@@ -816,10 +854,9 @@ footer nav li:hover {
         animation:2s apparition 3s forwards;
     }
 
-    #populaires h2 {
-        font-size: 1.5rem;
-        margin: 0;
-        margin-left: 8px;
+    #populaires div:nth-child(1) h2{
+        font-size: 1.4rem;
+        margin-left: 28px;
     }
 
     #populaires div:nth-child(1) i {
